# raspberry

./: .gitignore  CMakeLists.txt  README.md  build.fish  clean.fish  flash.fish
.cache/clangd/index/: address_mapped.h.24BA67BC36E7DF4A.idx  addressmap.h.00B7733C2A8EBE23.idx  asm_helper.S.046FE1127642E56E.idx  assert.h.B4CB5812B0D1A948.idx  atomic.c.E257FEA1C0D19938.idx  audio_device.c.69363F8D06251F82.idx  binary_info.h.D7A0022CE17E5B5D.idx  bit_ops_aeabi.S.A8BBED8ADC9D9BE8.idx  boot2_w25q080.S.59FDB89D7F6BB6D9.idx  boot_lock.c.E5419790EE8D6E4D.idx  boot_lock.h.2A568EC43383FF44.idx  bootrom.c.AF7CE60698ED787F.idx  bootrom.h.6A22852E655C387A.idx  bootrom_constants.h.196174F2175178F7.idx  bootrom_constants.h.3BDE8926759F35CF.idx  bootrom_lock.c.13876152D86BDFAB.idx  cdc.h.268D5D84B53580DE.idx  cdc_device.c.64FD8BFB1422EFE1.idx  cdc_device.h.A95276079EB0B72A.idx  claim.c.FB257EA687D7CBB1.idx  claim.h.A10F3B7B72A4DB60.idx  clocks.c.A92773A2145819BB.idx  clocks.h.175F17DDE26A8550.idx  clocks.h.4A369F75D577C02C.idx  clocks.h.FAEF5CD6AD9DF9FB.idx  code.h.0C6183AEB318C02C.idx  compile_time_choice.S.CDF08A3FBCF57AAC.idx  compiler.h.D10AD8A1882E9AAC.idx  config.h.4BF7B60445CE8425.idx  config.h.D95F0AEA88994079.idx  cpu_regs.h.028CFE24768C08BD.idx  critical_section.c.6DB908915C4532D0.idx  critical_section.h.3D47292F1CFBE132.idx  crt0.S.63312BCC45EE0F37.idx  datetime.c.635E390A5B1E3CD3.idx  datetime.h.A36324ADD5FDEB77.idx  dcd.h.C95637A071B32E48.idx  dcd_rp2040.c.6523E6F3C87D2581.idx  defs.h.FEA166666BB2E37C.idx  dfu_device.c.AEF668437870115F.idx  (+187 more)
include/: led_control.h
src/: hello_world.c  led_control.c  main.c
